<resources>
    <string name="app_name">BuscadorPDS</string>
    <string name="action_settings">Settings</string>
    <string name="labelBusquedaSimple">Busqueda Simple</string>
    <string name="labelBusquedaAvanzada">Busqueda Avanzada</string>
    <string name="labelEnviar">Buscar</string>
    <string name="labelHintSimple">ingrese cadena de busqueda</string>

    <string name="labelHintBusquedaAvanzadaRrun">ingrese Run</string>
    <string name="labelHintBusquedaAvanzadanombre">ingrese Nombre</string>
    <string name="labelHintBusquedaAvanzadaapellido">ingrese Apellido</string>
    <string name="labelHintBusquedaAvanzadamail">ingrese Mail</string>
    <string name="labelHintBusquedaAvanzadatelefono">ingrese Teléfono</string>
    <string name="labelHintBusquedaAvanzadapais">ingrese País</string>
    <string name="labelHintBusquedaAvanzadaregion">ingrese Región</string>
    <string name="labelHintBusquedaAvanzadaciudad">ingrese Ciudad</string>

</resources>
