<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vale.buscadorpds.Busqueda_avanzadaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/labelBusquedaAvanzada" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextRun"
        android:hint="@string/labelHintBusquedaAvanzadaRrun"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/editTextTelefono"
        android:layout_alignEnd="@+id/editTextTelefono" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNombre"
        android:hint="@string/labelHintBusquedaAvanzadanombre"
        android:layout_below="@+id/editTextRun"
        android:layout_alignLeft="@+id/editTextRun"
        android:layout_alignStart="@+id/editTextRun" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextApellido"
        android:hint="@string/labelHintBusquedaAvanzadaapellido"
        android:layout_below="@+id/editTextNombre"
        android:layout_alignLeft="@+id/editTextCiudad"
        android:layout_alignStart="@+id/editTextCiudad" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMail"
        android:hint="@string/labelHintBusquedaAvanzadamail"
        android:layout_below="@+id/editTextApellido"
        android:layout_alignLeft="@+id/editTextApellido"
        android:layout_alignStart="@+id/editTextApellido" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTelefono"
        android:hint="@string/labelHintBusquedaAvanzadatelefono"
        android:layout_below="@+id/editTextMail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPais"
        android:hint="@string/labelHintBusquedaAvanzadapais"
        android:layout_below="@+id/editTextTelefono"
        android:layout_alignRight="@+id/editTextRun"
        android:layout_alignEnd="@+id/editTextRun" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextRegion"
        android:hint="@string/labelHintBusquedaAvanzadaregion"
        android:layout_below="@+id/editTextPais"
        android:layout_alignRight="@+id/editTextPais"
        android:layout_alignEnd="@+id/editTextPais" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCiudad"
        android:hint="@string/labelHintBusquedaAvanzadaciudad"
        android:layout_below="@+id/editTextRegion"
        android:layout_alignRight="@+id/editTextTelefono"
        android:layout_alignEnd="@+id/editTextTelefono" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelEnviar"
        android:id="@+id/btn_enviarAvan"
        android:layout_below="@+id/editTextCiudad"
        android:layout_alignLeft="@+id/editTextPais"
        android:layout_alignStart="@+id/editTextPais" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewRaw"
        android:layout_alignParentBottom="true" />


</RelativeLayout>
